fix menu alignment + wavy lines

--- a/tuneme/static/css/smart.css
+++ b/tuneme/static/css/smart.css
@@ -13,6 +13,8 @@ body {background:white; position:relative; text-align:center;}
     .header .logo.hide {display:none !important;}
     /* Main Menu */
     .menu {text-align:left;}
+    .menuItem div.content li:first-child:before{content:""; height:10px; width:100%; display:block; background:url(../img/black-wave.png) 0 bottom repeat-x; background-size:20px;}
+    .menuItem div.content li:last-child:after{content:""; height:10px; width:100%; display:block; background:url(../img/black-wave.png) 0 0 repeat-x; background-size:20px;}
     .menuItem div.content {position:absolute; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; background:black; z-index:10; padding-top:60px;}
         .menuItem.hide div.content {display:none;}
 
@@ -23,6 +25,9 @@ body {background:white; position:relative; text-align:center;}
             .menuItem.hide#login span {right:90px; background-image:url(../img/user.png); z-index:12;}
         .menuItem#pages span {right:10px; width:75px; text-align:center; line-height:35px; font-weight:bold; text-transform:uppercase; font-size:15px; z-index:12; color:black; background:white; background-size:15px;}
             .menuItem.hide#pages span {color:white; background:black;}
+
+        .mainMenu ul li a img {float: left;}
+        .mainMenu ul li a div {vertical-align: middle; display: inline-block; line-height: 60px; margin-left: 20px;}
 
         /* Join Drop-Down */
         .menuItem div.content.join {background:white; padding:0;}
